--- a/app/assets/stylesheets/modules/_pickup_brand.scss
+++ b/app/assets/stylesheets/modules/_pickup_brand.scss
@@ -45,57 +45,61 @@
       }
     }
     &--lists{
-    width: 780px;
-    margin: 26px auto;
-    display: flex;
-    overflow-x: scroll;
-      .pickup_brand__product__images{
-        margin-left: 45px;
-        width: 220px;
-        height: 150px;
-        position: relative;
-        overflow: hidden;
-        margin: 0;
-        z-index: auto;
-        &--image{
-          position: absolute;
-          top: 0;
-          right: 0;
-          left: 0;
-          bottom: 0;
-          width: 100%;
-          z-index: auto;
-          height: 150px;
-          object-fit: cover;
-        }
-      }
+      width: 780px;
+      margin: 26px auto;
+      display: flex;
+      justify-content: space-around;
+      overflow-x: scroll;
       &__list{
         width: 220px;
         display: inline-block;
-        &__body{
-          background-color: white;
-          color: black;
-          padding: 16px;
-          h3.pickup_brand__product--name{
-            overflow: hidden;
-            line-height: 1.5;
-            font-size: 16px;
-            text-align: left;
-          }
-          &__details__menu{
-            font-size: 16px;
-            text-align: left;
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-          }
-          .pickup_brand__taxIncluded{
-            font-size: 10px;
-            text-align: left;
+        margin: 0 auto;
+        height: 100%;
+        .pickup_brand__product__images{
+          width: 220px;
+          height: 150px;
+          position: relative;
+          overflow: hidden;
+          margin: 0;
+          z-index: auto;
+          &--image{
+            position: absolute;
+            top: 0;
+            right: 0;
+            left: 0;
+            bottom: 0;
+            width: 100%;
+            z-index: auto;
+            height: 150px;
+            object-fit: cover;
           }
         }
+          &__body{
+            background-color: white;
+            color: black;
+            padding: 16px;
+            h3.pickup_brand__product--name{
+              overflow: hidden;
+              line-height: 1.5;
+              font-size: 16px;
+              text-align: left;
+            }
+            &__details {
+              .pickup_brand__details__menu{
+                font-size: 16px;
+                text-align: left;
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+              }
+            }
+            .pickup_brand__taxIncluded{
+              font-size: 10px;
+              text-align: left;
+            }
+          }
       }
-    }
+    } 
   }
 }
 
