--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -28,8 +28,9 @@
               %span
                 送料込み
           
-          %a.products-show-itemBox__buy-btn{:href => "#"}
-            購入画面に進む
+              -# %a.products-show-itemBox__buy-btn{:href => "#"}
+            = link_to "購入画面に進む", purchase_path
+            
 
 
           .products-show-detail
@@ -64,7 +65,7 @@
                 %tr
                   %th 発送元の地域
                   %td
-                    = link_to "" "岩手県"
+                    = @product.shipping_area
                 %tr
                   %th 発送日の目安
                   %td 4-7日で発送
