--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -29,7 +29,7 @@
                 送料込み
           
               -# %a.products-show-itemBox__buy-btn{:href => "#"}
-            = link_to "購入画面に進む", purchase_path
+            = link_to "購入画面に進む", purchase_path, class: "products-show-itemBox__buy-btn"
             
 
 
