--- a/app/assets/stylesheets/modules/_users.new.scss
+++ b/app/assets/stylesheets/modules/_users.new.scss
@@ -1,6 +1,6 @@
-.registrations-new{
+.users-new{
   width: 100%;
-  height: 100%;
+  height: 165vh;
   background: #f5f5f5;
   a{
     display: none
@@ -36,6 +36,49 @@
           margin-left: auto;
           margin-bottom: 38px;
           margin-top: 55px;  
+          &__name-desc{
+
+          }
+          &__fullname{
+            display: flex;
+            justify-content: space-between;
+
+            &__last_name{
+              #user_last_name{
+                width: 165px;
+              }
+
+            }
+            &__first_name{
+              #user_first_name{
+                width: 165px;
+              }
+              
+
+            }
+            
+          }
+          &__ruby-name-desc{
+
+          }
+          &__ruby-fullname{
+            display: flex;
+            justify-content: space-between;
+
+            &__ruby_last_name{
+              #user_ruby_last_name{
+                width: 165px;
+              }
+
+            }
+            &__ruby_first_name{
+              #user_ruby_first_name{
+                width: 165px;
+              }
+
+            }
+
+          }
           input{
             margin-bottom: 27px;
             width: 343px;
