--- a/app/assets/stylesheets/modules/_header.scss
+++ b/app/assets/stylesheets/modules/_header.scss
@@ -150,11 +150,11 @@ body.header{
       &__right {
         font-size: 14px;
         display: flex;
-        &--log-out{
+        &--mypage{
           text-decoration: none;
           color: black;
         }
-        &--log-out:hover{
+        &--mypage:hover{
           text-decoration: none;
           color:red;
         }
