--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -7,29 +7,28 @@
         会員情報入力
       .registrations-new__wrapper__box__form
         .registrations-new__wrapper__box__form__set
-          = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
+          = form_for(resource, as: resource_name, url: new_user_path(resource_name)) do |f|
             = render "devise/shared/error_messages", resource: resource
 
             .registrations-new__wrapper__box__form__set__nickname
               = f.label :nickname
               %span.form-require 必須
               %br/
-              = f.text_field :email, autofocus: true, autocomplete: "email", placeholder: '例）フリマ太郎'
+              = f.text_field :nickname, placeholder: '例）フリマ太郎'
             
             .registrations-new__wrapper__box__form__set__email
               = f.label :email
               %span.form-require 必須
               %br/
-              = f.email_field :email, autofocus: true, autocomplete: "email", placeholder: 'PC・携帯どちらでも可'
+              = f.email_field :email, placeholder: 'PC・携帯どちらでも可'
             
             .registrations-new__wrapper__box__form__set__password
-              = f.label :password
+              = f.label :encrypted_password
               %span.form-require 必須
               %br/
-              = f.email_field :email, autofocus: true, autocomplete: "email", placeholder: '7文字以上の半角英数字' 
+              = f.password_field :encrypted_password, placeholder: '7文字以上の半角英数字' 
               .registrations-new__wrapper__box__form__set__password__desc
                 ※ 英字と数字の両方を含めて設定してください
-
 
             .registrations-new__wrapper__box__form__set__desc-safety
               %h 本人確認
@@ -38,30 +37,27 @@
 
             .registrations-new__wrapper__box__form__set__name
               .registrations-new__wrapper__box__form__set__name__last-name
-                = f.label :email
+                = f.label :last_name
                 お名前(全角) 
                 %span.form-require 必須
-
                 %br/
-                = f.email_field :email, autofocus: true, autocomplete: "email", placeholder: '例）山田'
+                = f.text_field :last_name, placeholder: '例）山田'
               .registrations-new__wrapper__box__form__set__name__first-name
-                = f.label :email
+                = f.label :first_name
                 %br/
-                = f.email_field :email, autofocus: true, autocomplete: "email",placeholder: '例）彩'
+                = f.text_field :first_name, placeholder: '例）彩'
 
             .registrations-new__wrapper__box__form__set__ruby-name
               .registrations-new__wrapper__box__form__set__ruby-name__last-name
-                = f.label :email
+                = f.label :ruby_last_name
                 お名前カナ(全角)  
                 %span.form-require 必須
                 %br/
-                = f.email_field :email, autofocus: true, autocomplete: "email", placeholder: '例）ヤマダ'
+                = f.text_field :ruby_last_name, placeholder: '例）ヤマダ'
               .registrations-new__wrapper__box__form__set__ruby-name__first-name
-                = f.label :email
-                
-                
+                = f.label :ruby_first_name
                 %br/
-                = f.email_field :email, autofocus: true, autocomplete: "email", placeholder: '例）アヤ'
+                = f.text_field :ruby_first_name, placeholder: '例）アヤ'
             
             .registrations-new__wrapper__box__form__set__date-index
               %h 生年月日
@@ -69,24 +65,6 @@
 
             .registrations-new__wrapper__box__form__set__birthdate
 
-              .registrations-new__wrapper__box__form__set__birthdate__year
-                = f.label :email
-                %br/
-                = f.email_field :email, autofocus: true, autocomplete: "email"
-                %p 年
-                
-
-                
-              .registrations-new__wrapper__box__form__set__birthdate__month
-                = f.label :email
-                %br/
-                = f.email_field :email, autofocus: true, autocomplete: "email"
-                %p 月
-              .registrations-new__wrapper__box__form__set__birthdate__day
-                = f.label :email
-                %br/
-                = f.email_field :email, autofocus: true, autocomplete: "email"
-                %p 日
 
             .registrations-new__wrapper__box__form__set__about-form
               %p1 ※ 本人情報は正しく入力してください。会員登録後、修正するにはお時間を頂く場合があります。
