--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -9,15 +9,14 @@
           .products-show-itemBox__pic
             %ul
               %li
-                %img{:src => "https://s3-ap-northeast-1.amazonaws.com/mercarimaster/uploads/captured_image/content/13/a007.png"}/
+                = image_tag 'https://s3-ap-northeast-1.amazonaws.com/mercarimaster/uploads/captured_image/content/13/a007.png'
                 %ul
                   %li
-                    -# = image_tag 'dog.JPG', :size =>'320x480'　
-                    %img{:height => "75", :src => "https://s3-ap-northeast-1.amazonaws.com/mercarimaster/uploads/captured_image/content/13/a007.png", :width => "75"}/
+                    = image_tag 'pict/bg-appBanner-pict.jpg', size: '75*75'
                   %li
-                    %img{:height => "75", :src => "https://s3-ap-northeast-1.amazonaws.com/mercarimaster/uploads/captured_image/content/14/a001.png", :width => "75"}/
+                    = image_tag 'pict/bg-appBanner-pict.jpg', size: '75*75'
                   %li
-                    = image_tag 'pict/bg-appBanner-pict.jpg'
+                    = image_tag 'https://s3-ap-northeast-1.amazonaws.com/mercarimaster/uploads/captured_image/content/13/a007.png', size: '75*75'
           .products-show-itemBox__price
             %span
               ¥
@@ -27,8 +26,7 @@
                 (税込)
               %span
                 送料込み
-          
-              -# %a.products-show-itemBox__buy-btn{:href => "#"}
+
             = link_to "購入画面に進む", purchase_path, class: "products-show-itemBox__buy-btn"
             
 
@@ -78,9 +76,10 @@
                 お気に入り 0
             %ul.optional
               %li.optionalBtn
-                %a{:href => "#"}
+                = link_to "/" do
                   %i.fa.fa-flag
                   不適切な商品の通報
+
 
 
         .products-show-commentBox
@@ -101,15 +100,13 @@
       .products-show-link-block
         %ul.links
           %li
-            %a{:href => "#"}
+            = link_to "#" do
               %i.fa.fa-angle-left
-              %span
               前の商品
           %li
-            %a{:href => "#"}
-              %span 
-              後ろの商品
+            = link_to "#" do
               %i.fa.fa-angle-right
+              後ろの商品
 
       .products-show-relatedItems
         = link_to "" "ベビー・キッズをもっと見る"
