--- a/app/views/products/new.html.haml
+++ b/app/views/products/new.html.haml
@@ -1,7 +1,7 @@
 .products_new-header
 .products_new-main
   .products_new-main__form
-    .products_new-main__form--product_image
+    .products_new-main__form--product_new
       = form_with model: @product, local: true, id:"new_product" do |form|
         .products_new-newimage
           .products_new-product__headline
@@ -10,12 +10,13 @@
           %p.products_new-product__explanation 最大10枚までアップロードできます
           .products_new-imagearea
             = form.fields_for :product_images do |i|
-              = i.file_field :image, style: "display: none;"
-              = i.label :image, class: 'products_new-imagearea__select' do
-                = icon('fas', 'camera', class: 'products_new-imagearea__select--icon')
-                %p.products_new-imagearea__select--explanation
-                  ドラッグアンドドロップ
-                  %br またはクリックしてファイルをアップロード
+              .js-file_group{ data: { index: '#{image.index}' } }
+                = i.file_field :image, style: "display: none;", class: "js-file"
+                = i.label :image, class: 'products_new-imagearea__select' do
+                  = icon('fas', 'camera', class: 'products_new-imagearea__select--icon')
+                  %p.products_new-imagearea__select--explanation
+                    ドラッグアンドドロップ
+                    %br またはクリックしてファイルをアップロード
         .products_new-title
           .products_new-product__headline
             .products_new-product__headline--title 商品名
