--- a/app/assets/stylesheets/products/_new.scss
+++ b/app/assets/stylesheets/products/_new.scss
@@ -79,6 +79,11 @@
   }
 }
 
+.js-remove{
+  width: 6%;
+  cursor: pointer;
+}
+
 .products_new-main__form--product{
   height: 100%;
   width: 100%;
