--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -12,7 +12,9 @@
         - @products.each do |product|
           .pickup_category__containerCategory__product--lists__list
             = link_to product.name, product_path(product.id)#, class: "pickup_category__containerCategory__product--lists__list"
-          
+
+      -# = link_to image_tag ('pict/bg-appBanner-pict.jpg', size: '75*75'), product_path(product.id)#, class: "pickup_category__containerCategory__product--lists__list"
+ 
       -# %figure.pickup_category__product__images
       -#   = image_tag "https://static.mercdn.net/item/detail/orig/photos/m26688514106_1.jpg?1579836989", class: "pickup_category__product__images--image"
       -# .pickup_category__containerCategory__product--lists__list--body
