--- a/app/views/home/_header.html.haml
+++ b/app/views/home/_header.html.haml
@@ -10,20 +10,29 @@
         .home-header__header__box__sub__left--category
           = link_to "#", class: "categoryBtn", id: "left-category" do
             = "カテゴリー"
+            .visibleTree
+            %ul.firstMenu__parents
+              - @parents.each do |parent|
+                %li.firstMenu__parents__parent
+                  /= link_to "#{parent.name}", "#", class: "item-link" 
+
+                  %ul.secondMenu__children
+                    - parent.children.each do |child|
+                      %li.secondMenu__children__child
+                        /= link_to "#{child.name}", "#", class: "item-link" 
+
+                        %ul.thirdMenu__grandchildren
+                          - child.children.each do |grandchildren|
+                            %li.thirdMenu__grandchildren__grandchild
+                              /= link_to "#{grandchildren.name}", "#", class: "item-link" 
         .home-header__header__box__sub__left--brand
           = link_to "#", class: "brandBtn", id: "left-category" do
             = "ブランド"
 
-          .visibleTree
-            %ul.firstMenu__parents
-              
-              %li.firstMenu__parents__parent
-                
-                %ul.secondMenu__children                  
-                  %li.secondMenu__children__child
-                    %ul.thirdMenu__grandchildren                       
-                      %li.thirdMenu__grandchildren__grandchild
-        .home-header__header__box__sub__left--brand
+          
+
+
+        
       .home-header__header__box__sub__right
         - if current_user.nil?
           = link_to "ログイン", new_user_session_path, class: "home-header__header__box__sub__right--log-in" 
