--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -1,4 +1,5 @@
 検証用仮設置 product index
+-# = image_tag(@product.product_images.first.image.url)
 .wrapper
   .pickup_category__containerCategory
     %h2.pickup_category__containerCategory__title
@@ -12,8 +13,9 @@
         - @products.each do |product|
           .pickup_category__containerCategory__product--lists__list
             = link_to product_path(product.id), class: "pickup_category__containerCategory__product--lists__list" do
-              = product.name
-              -# %figure.pickup_category__product__images
+              %figure.pickup_category__product__images
+                = product.name
+                
               -#   = image_tag "https://static.mercdn.net/item/detail/orig/photos/m26688514106_1.jpg?1579836989", class: "pickup_category__product__images--image"
               -# .pickup_category__containerCategory__product--lists__list--body
               -#   %h3.pickup_category__product--name
