--- a/app/assets/stylesheets/products/_new.scss
+++ b/app/assets/stylesheets/products/_new.scss
@@ -126,7 +126,7 @@
     font-weight: bold;
   }
   &__category{
-    height: 250px;
+    height: auto;
     width: 100%;
     padding-top: 40px;
   }
