--- a/app/assets/stylesheets/modules/_registrations.new.scss
+++ b/app/assets/stylesheets/modules/_registrations.new.scss
@@ -1,6 +1,6 @@
 .registrations-new{
   width: 100%;
-  height: 100%;
+  height: 190vh;
   background: #f5f5f5;
   a{
     display: none
@@ -11,7 +11,7 @@
   &__wrapper{
     &__box{
       width: 700px;
-      height: 68rem;
+      height: 80rem;
       margin-right: auto;
       margin-left: auto;
       margin-bottom: 38px;
@@ -23,7 +23,6 @@
         padding: 16px;
         font-weight: bold;
         margin-top: 15px;
-        margin-bottom: 15px;
         border-bottom: solid 1px;
         border-color: whitesmoke;  
       }
@@ -35,7 +34,17 @@
           margin-right: auto;
           margin-left: auto;
           margin-bottom: 38px;
-          margin-top: 55px;  
+          margin-top: 15px;
+          #error_explanation{
+            margin-bottom: 10px;
+            ul{
+              li{
+              }
+            }
+          }
+          &__passwordconfirmation{
+            margin-top: 27px;
+          }
           input{
             margin-bottom: 27px;
             width: 343px;
@@ -62,6 +71,9 @@
           &__email{
           }
           &__password{
+            #user_password{
+              margin-bottom:1px;
+            }
             &__desc{
               margin: 8px 0 0;
               line-height: 1.5;
@@ -76,7 +88,6 @@
             margin-right: auto;
             margin-left: auto;
             margin-bottom: 38px;
-            margin-top: 55px;
             h{
               font-weight: bold;
             }
@@ -113,7 +124,13 @@
             width: 343px;
             margin-right: auto;
             margin-left: auto;
-            margin-bottom: 38px;
+            margin-bottom: 27px;
+            &__year{
+              width: 100%;
+              .birthdate_field{
+                width: 100%;
+              }
+            }
             label{
               display: none;
             }
