--- a/app/assets/stylesheets/modules/_header.scss
+++ b/app/assets/stylesheets/modules/_header.scss
@@ -1,182 +1,155 @@
-*{
-  box-sizing: border-box;
-}
+.header{
+  padding: 15px 60px;
+  box-shadow: 0 3px 3px 0 rgba(0,0,0,0.16);
+  margin-bottom: 3px;
 
-body.header{
-  margin: 0;
-  padding: 0;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
-
-.categoryBtn,.brandBtn {
-  text-decoration: none;
-  color: black;
-}
-
-.categoryBtn:hover,.brandBtn:hover{
-  background-position: -100% 0;
-  color: orange;
-}
-
-.item-link{
-  color: black;
-  text-decoration: none;
-  line-height: 32px;
-  background-position: center right;
-  background-repeat: no-repeat;
-  background-size: 18px;
-  padding-right: 30px;
-  display: block;
-  width: 240px;
-  padding: 3px 8px 3px 5px;
-  border-bottom: 1px solid #f8f8f8;
-  &:hover{
-    background-position: -100% 0;
-    color: orange; 
-  }
-}
-
-
-.home-header__header{
-  padding: 0 60px;
-  font-family: "Source Sans Pro", Helvetica, Arial, 游ゴシック体, YuGothic, メイリオ, Meiryo, sans-serif;
-  &__box {
-    margin: 0 auto;
-    height: 100%;
-    min-height: 82px;
-    width: 100%;
+  &__box{
     max-width: 1040px;
-    &__main {
-      padding-top: 15px;
-      padding-bottom: 10px;
+    width: 100%;
+    min-height: 82px;
+    margin: 0 auto;
+
+    &__main{
       display: flex;
-      justify-content: space-between;
       align-items: center;
-      &--icon {
-        background-image: image-url("logo.png");
-        height: 40px;
-        width: 140px;
-        background-size: cover;
-      }
-      &--searchbox {
-        width: 70%;
-        padding: 0.5em 1em;
-        margin: 1em 0;
-        font-weight: bold;
-        border: solid 1px gray;
-        text-align: right;
-        background-color: rgb(245, 245, 245);
-        font-size: 16px;
-        line-height: 1.4em;
-        border-width: 1px;
-        border-style: solid;
-        border-color: rgb(204, 204, 204);
-        border-image: initial;
+
+      .main__icon{
+        padding-bottom: 10px;
+        margin-right: 30px;
         border-radius: 4px;
-        outline: none;
+      }
+      .main__search{
+        margin-left: auto;
+        width: 100%;
+
+        .search-form{
+          width: 100%;
+          display: flex;
+          margin-bottom: 5px;
+
+          .search-input{
+            width: calc(100% - 26px);
+            height: 36px;
+            padding: 0 0 0 5px;
+          }
+        }
+        .search-btn{
+          height: 36px;
+          width: 36px;
+          margin-bottom: 5px;
+          border: 0;
+          cursor: pointer;
+          background-color: #3CCACE;
+          padding: 8px;
+
+          img{
+            width: 100%;
+            vertical-align: bottom;
+          }
+        }
       }
     }
-    &__sub {
+    &__action{
+      font-size: 15px;
       display: flex;
-      justify-content: space-between;
-      margin-bottom: 10px;
-      line-height: 32px;
-      padding-top: 1px;
-      &__left {
-        display: flex;
-        font-size: 14px;
 
-        &--category {
-          padding-right: 30px;
-          position: relative;
-          &:hover > .visibleTree{
-            opacity: 1;
-            visibility: visible;
+      .action__list{
+        display: flex;
+        line-height: 30px;
+
+        .list__category {
+          padding: 0;
+          cursor: pointer;
+
+          a:hover {
+            color: #3CCACE;
           }
-          .visibleTree{
-            opacity: 0;
-            visibility: hidden;
+          a {
+            text-decoration: none;
+            color: black;
+          }
+        }
+        .list__brand{
+          line-height: 30px;
+          padding: 0 0 0 40px;
+
+          a:hover{
+            color: #3CCACE;
+          }
+          a {
+            text-decoration: none;
+            padding: 0;
+            color: black;
+          }
+          .brand-tree{
+            z-index: 1;
             position: absolute;
-            display: flex;
-            top: 100%;
-            z-index: 2;
-            background-color: white;
-              .firstMenu__parents{
-                width: 240px;
-                  &__parent{
-                  &:hover > .secondMenu__children{
-                  opacity: 1;
-                  visibility: visible;
-                }
-                  }
-                .secondMenu__children{
-                  position: absolute;
-                  top: 0px;
-                  left: 100%;
-                  opacity: 0;
-                  visibility: hidden;
-                  background-color: white;
-                  &__child{
-                  &:hover > .thirdMenu__grandchildren{
-                    opacity: 1;
-                    visibility: visible;
-                  }
-                }
-                    .thirdMenu__grandchildren{
-                      background-color: white;
-                      position: absolute;
-                      left: 100%;
-                      top: 0px;
-                      opacity: 0;
-                      visibility: hidden;
-                      &__grandchild{
-                        background-color: white;
-                      }
-                  }
-                }
+            background-color: #fff;
+            width: 240px;
+            top: 40px;
+            .first__tree{
+              background-color: #fff;
+              display: flex;
+              flex-direction: column;
+              position: relative;
+              li{
+                position: relative;
               }
             }
           }
-
-              &__item{
-                position: relative;
-              }
-
-      }
-        &--brand {
-          padding-right: 30px;
-          padding-left: 16px;
         }
-      &__right {
-        font-size: 14px;
+      }
+      .action__user{
+        margin-left: auto;
         display: flex;
-        &--mypage{
-          text-decoration: none;
-          color: black;
+
+        .mypage {
+          line-height: 30px;
         }
-        &--mypage:hover{
-          text-decoration: none;
-          color:red;
+
+        .user__login{
+          line-height: 30px;
+          padding-left: 30px;
+
+          .login_btn {
+            text-decoration: none;
+            color: black;
+            background-color: paleturquoise;
+            padding: 10px 36px;
+            border-radius: 10px;
+          }
+          a:hover{
+            color: orange;
+          }
         }
-        &--log-in{
-          text-decoration: none;
-          color: black;
+        .user__new{
+          line-height: 30px;
+          padding-left: 30px;
+
+          .new_btn {
+            text-decoration: none;
+            color: white;
+            background-color: cornflowerblue;
+            padding: 10px 20px;
+            border-radius: 10px;
+          }
+          a:hover{
+            color: orange;
+          }
         }
-        &--log-in:hover{
-          text-decoration: none;
-          color: red;
+        .mypage{
+          color: #333;
+          line-height: 30px;
+          padding: 0 0 0 16px;
+          a{
+            text-decoration: none;
+            color: black;
+          }
+          a:hover{
+            color: orange;
+          }
         }
-        &--register-user {
-          padding-left: 12px;
-          text-decoration: none;
-          color: black;
-        }
-        &--register-user:hover {
-          padding-left: 12px;
-          text-decoration: none;
-          color: red;
-        }
-      }
       }
     }
   }
+}
