--- a/app/views/home/_header.html.haml
+++ b/app/views/home/_header.html.haml
@@ -28,7 +28,7 @@
       - if user_signed_in?
         %li.mypage
           = link_to "#", class: "mypage_btn" do
-            = image_tag "user.png", class: "user-icon", size: "20x20"
+            //= image_tag "user.png"
             マイページ
       - else
         %li.user__login
