update category function
## What
### almost complete category function
- categories/categorymenu.scss
- categories/index.scss
-

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,3 +17,5 @@
 @import "modules/sessions.new";
 @import "modules/users.new";
 @import "modules/users.show";
+@import "categories/index";
+@import "categories/categorymenu";
