--- a/app/assets/stylesheets/modules/_header.scss
+++ b/app/assets/stylesheets/modules/_header.scss
@@ -8,6 +8,8 @@
     width: 100%;
     min-height: 82px;
     margin: 0 auto;
+    margin-bottom: 10px;
+    margin-top: 10px;
 
     &__main{
       display: flex;
