--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -13,9 +13,8 @@
         - @products.each do |product|
           .pickup_category__containerCategory__product--lists__list
             = link_to product_path(product.id), class: "pickup_category__containerCategory__product--lists__list" do
-              %figure.pickup_category__product__images
-                = product.name
-                
+              = product.name
+              -# %figure.pickup_category__product__images
               -#   = image_tag "https://static.mercdn.net/item/detail/orig/photos/m26688514106_1.jpg?1579836989", class: "pickup_category__product__images--image"
               -# .pickup_category__containerCategory__product--lists__list--body
               -#   %h3.pickup_category__product--name
