--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,1 +1,32 @@
 = link_to "ログアウト", destroy_user_session_path, method: :delete, class: 'btn'
+
+.users.show
+
+  .users.show__left-wrapper
+
+    - @contents.each do |c|
+      .users.show__left-wrapper__contents
+        .users.show__left-wrapper__contents__content-title
+          = link_to c[:path],method: c[:verc] do
+            = c[:name]
+
+    - @furimapays.each do |f|
+      .users.show__left-wrapper__furimapay
+        .users.show__left-wrapper__furimapay__furimapay-title
+          = link_to f[:path],method: f[:verc] do
+            = f[:name]
+
+    - @settings.each do |s|
+      .users.show__left-wrapper__settings
+        .users.show__left-wrapper__settings__setting-title
+          = link_to s[:path],method: s[:verc] do
+            = s[:name]
+
+  .users.show__right-wrapper
+    .users.show__right-wrapper__head
+      .users.show__right-wrapper__head__icon
+        = image_tag 'icon/mypageicon.png', height: '60', width: '60'
+      .users.show__right-wrapper__head__nickname
+        = current_user.nickname
+      .users.show__right-wrapper__head__products-count
+        = "出品数 #{current_user.products.count}"
