--- a/app/assets/stylesheets/products/_show.scss
+++ b/app/assets/stylesheets/products/_show.scss
@@ -39,7 +39,7 @@
                   margin-top: 10px;
                   li{
                     width: 25%;
-                    margin: 0 10px 0 0;
+                    margin: 0 auto;
                     img{
                       object-fit: cover;
                       height: 87px;
