--- a/app/assets/stylesheets/products/_show.scss
+++ b/app/assets/stylesheets/products/_show.scss
@@ -37,8 +37,9 @@
                   display: flex;
                   justify-content: center;
                   margin-top: 10px;
+                  flex-flow:wrap;
                   li{
-                    width: 25%;
+                    width: 20%;
                     margin: 0 auto;
                     img{
                       object-fit: cover;
