--- a/app/assets/stylesheets/modules/_users.show.scss
+++ b/app/assets/stylesheets/modules/_users.show.scss
@@ -1,26 +1,34 @@
 .users.show{
+  background: #f5f5f5;
+
 
   width: 100%;
   height: 400vh;
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   &__left-wrapper{
     width: 280px;
     height: 100%;
     margin-top: 40px;
-
+    margin-right: 60px;
     a{
       text-decoration: none;
+      color:black
     }
+    
     
     &__contents{
       display: flex;
       flex-direction: column;
       &__content-title{
+        a{
+          color:black;
+        }
         &:hover{
           color:#000;
           background-color: lightgrey;
           cursor: pointer;
+          
         }
         color: #555;
         display: inline-block;
@@ -31,8 +39,18 @@
         margin-bottom: 2px;
         background-color: white;
         box-shadow: 0 2px 2px 0 rgba(0,0,0,0.2);
-        font-size: 15px;
+        font-size: 14px;
       }
+
+    }
+
+    &__furimapay-desc{
+      margin-top: 40px;
+      h{
+        font-weight: bold;
+
+      }
+
 
     }
     &__furimapay{
@@ -53,8 +71,17 @@
         margin-bottom: 2px;
         background-color: white;
         box-shadow: 0 2px 2px 0 rgba(0,0,0,0.2);
-        font-size: 15px;
+        font-size: 14px;
       }
+    }
+
+    &__settings-desc{ 
+      margin-top: 40px;
+      h{
+        font-weight: bold;
+
+      }
+
     }
     &__settings{
       display: flex;
@@ -74,7 +101,7 @@
         margin-bottom: 2px;
         background-color: white;
         box-shadow: 0 2px 2px 0 rgba(0,0,0,0.2);
-        font-size: 15px;
+        font-size: 14px;
       }
     }
   }
@@ -103,12 +130,18 @@
       &__nickname{
         height: 30px;
         line-height: 30px;
+        font-size: 14px;
+
 
 
       }
       &__products-count{
         height: 30px;
         line-height: 30px;
+        font-size: 14px;
+        margin-bottom: 24px;
+
+
 
       } 
     }
