--- a/app/assets/stylesheets/products/_show.scss
+++ b/app/assets/stylesheets/products/_show.scss
@@ -132,6 +132,7 @@
           line-height: 1.5;
           font-size: 18px;
           margin-bottom: 30px;
+          white-space: pre-line;
           }
         
 
