--- a/app/assets/stylesheets/modules/_header.scss
+++ b/app/assets/stylesheets/modules/_header.scss
@@ -33,10 +33,11 @@
             width: calc(100% - 26px);
             height: 36px;
             padding: 0 0 0 5px;
+            border-radius: 1%;
           }
         }
         .search-btn{
-          height: 36px;
+          height: 24px;
           width: 36px;
           margin-bottom: 5px;
           border: 0;
