--- a/app/assets/stylesheets/modules/_top_key_features.scss
+++ b/app/assets/stylesheets/modules/_top_key_features.scss
@@ -30,7 +30,7 @@ body{
     width: 100%;
     margin: 0 auto;
     display: flex;
-    flex-wrap: wrap;
+    //flex-wrap: wrap;
     &__list{
       display: flex;
       flex-direction: column;
