--- a/app/views/home/_header.html.haml
+++ b/app/views/home/_header.html.haml
@@ -6,7 +6,7 @@
     .main__search
       = form_with(url: "#", local: true, method: :get, class: "search-form") do |form|
         = form.text_field :keyword, placeholder: "キーワードから探す", class: "search-input"
-        = form.submit src: "https://i.dlpng.com/static/png/6645719_preview.png", type: "image", class: "search-btn"
+        = form.submit src: "https://www.iconsdb.com/icons/preview/white/search-13-xxl.png", type: "image", class: "search-btn"
   .header__box__action
 
     %ul.action__list
