add validation in products index
## What
- validation in products index
- logout function in home index

--- a/app/views/home/_header.html.haml
+++ b/app/views/home/_header.html.haml
@@ -23,9 +23,10 @@
     %ul.action__user
       - if user_signed_in?
         %li.mypage
-          = link_to "#", class: "mypage_btn" do
-            //= image_tag "user.png"
+          = link_to user_path(current_user.id), class: "mypage_btn" do
             マイページ
+          = link_to destroy_user_session_path, method: :delete, class: 'new_btn' do
+            ログアウト
       - else
         %li.user__login
           = link_to new_user_session_path, class: "login_btn" do
