--- a/app/assets/stylesheets/modules/_header.scss
+++ b/app/assets/stylesheets/modules/_header.scss
@@ -135,6 +135,7 @@
             background-color: cornflowerblue;
             padding: 10px 20px;
             border-radius: 10px;
+           
           }
           a:hover{
             color: orange;
@@ -144,9 +145,11 @@
           color: #333;
           line-height: 30px;
           padding: 0 0 0 16px;
+          
           a{
             text-decoration: none;
             color: black;
+            margin-right: 16pt;
           }
           a:hover{
             color: orange;
