--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -15,6 +15,8 @@
         .products-show-itemBox
           %h2.products-show-itemBox__name
             = @product.name
+            - if @product.seller_id.present? && @product.buyer_id.present?
+              = "Sold Out"
           .products-show-itemBox__pic
             %ul
               %li
