--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,6 +13,7 @@
 @import "modules/footer";
 @import "products/new";
 @import "products/show";
+@import "products/purchase";
 @import "modules/registrations.new";
 @import "modules/sessions.new";
 @import "modules/users.new";
